overflow issue

--- a/src/components/LeaderRetreat/leaderRetreat.css
+++ b/src/components/LeaderRetreat/leaderRetreat.css
@@ -170,7 +170,7 @@ button.activated {
   border-radius: 40px;
   width: 100%;
   max-height: 90%;
-  overflow-y: scroll;
+  /* overflow-y: scroll; */
   /* height: 100%; */
   background: #fff;
   filter: drop-shadow(0 20px 13px rgb(0 0 0 / 0.03))
